<resources>
    <string name="app_name">mempelajaribahasakotlin</string>
    <string name="Judul">Hello Sayang</string>
    <string name="profil"> Keju</string>
    <string name="Jenis">Mozzarella</string>
    <string name="btnscan"> Scan barcode</string>
    <string name="btn1">Jelajahi</string>
    <string name="btn2">Pabrik</string>
    <string name="btnmatch">Spesifikasi</string>
    <string name="btnright">Apa?</string>
    <string name="btnleft">Why?</string>
    <string name="mobil">Mustang GT</string>
    <string name="nama">Name:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="btnsubmit">Submit</string>
    <string name="name">Enter Your Name</string>
    <string name="nohp">Enter Your Phone Number</string>
    <string name="alamat">Enter Your Address</string>

</resources>