<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tablelayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@tools:sample/avatars"
            app:srcCompat="@drawable/img_person" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/nama"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextText8"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/name" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/phone"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/nohp"  />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/address"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextText10"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:hint="@string/alamat"  />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnsubmit" />
    </TableRow>
</TableLayout>