<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".linearlayout">

  <ImageView
      android:id="@+id/LogoFord"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_gravity="top|center"
      android:layout_marginTop="50dp"
      app:srcCompat="@drawable/img_logoford" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"
      android:orientation="horizontal">

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:backgroundTint="#FF7BA8"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:backgroundTint="#00B3CA"
        android:text="@string/btn2" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"
      android:orientation="horizontal">

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/btnmatch" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"
      android:orientation="horizontal">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/btnright" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"
      android:orientation="horizontal">

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="300dp"
        android:layout_weight="1"
        android:text="@string/btnleft" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        app:srcCompat="@drawable/icon_left" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/mobil"
        android:textAlignment="center"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/icon_right" />
  </LinearLayout>
</LinearLayout>